# magnetic_valve_switch

./: CMakeLists.txt  package.xml
scripts/: gripper_switch_server.py
src/: gripper_switch_server.cpp
srv/: switcher.srv
